--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.12</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
