--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,11 @@
 			<artifactId>javase</artifactId>
 			<version>2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
