--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/views/links/kid/robocar_poli.jsp=UTF-8
+encoding//WebContent/WEB-INF/views/playground/demo/naver/search/book.jsp=UTF-8
 encoding//WebContent/WEB-INF/views/tools/computer/ip_analyzer/ip_analyzer.jsp=UTF-8
