--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,13 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.2.5</version>
 		</dependency>
+		<!--
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+		-->
 
 		<!-- Debug -->
 		<dependency>
